# CRM

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  README.md  docker-compose.yml
.codex/: config.toml  requirements.toml
.codex/rules/: exec.rules
.codex/skills/: build_lot.md  orchestrator.md  qa_review.md  release_pr.md  security_review.md  spec_pack.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260131_0001_security_schema.py  20260131_0002_rls_and_auth_helpers.py  20260131_0003_seed_permissions_and_system_roles.py
backend/app/: main.py  settings.py  worker.py
backend/app/api/: audit.py  auth.py  members.py  roles.py  router.py  tenants.py
backend/app/auth/: deps.py  jwt.py  password.py
backend/app/db/: __init__.py  context.py  engine.py  session.py
backend/db/: init.sql
backend/tests/: test_health.py  test_security_rls.py
docs/packs/: IMPL_L0-foundations.md  IMPL_L1-infra-skeleton.md  IMPL_L2-auth-tenants-rbac-rls-base.md  IMPL_PACK_TEMPLATE.md  PR_L0-foundations.md  PR_L1-infra-skeleton.md  PR_L2-auth-tenants-rbac-rls-base.md  QA_L0-foundations.md  QA_L1-infra-skeleton.md  QA_L2-auth-tenants-rbac-rls-base.md  SECURITY_L0-foundations.md  SECURITY_L1-infra-skeleton.md  SECURITY_L2-auth-tenants-rbac-rls-base.md  SPEC_L0-foundations.md  SPEC_L1-infra-skeleton.md  SPEC_L2-auth-tenants-rbac-rls-base.md  (+5 more)
frontend/: .gitignore  index.html  package.json
scripts/: agent_lot.sh  check_policy.sh  run_overnight.sh  verify.sh
(+19 files in other folders)
